--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://rashedraju.github.io/pack-finder",
   "name": "pack-finder",
   "version": "0.1.0",
   "private": true,
@@ -31,7 +32,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "npm i --save-dev prettier && npm i --save-dev babel-eslint && npx install-peerdeps --dev eslint-config-airbnb && npm i --save-dev eslint-config-prettier eslint-plugin-prettier"
+    "lint": "npm i --save-dev prettier && npm i --save-dev babel-eslint && npx install-peerdeps --dev eslint-config-airbnb && npm i --save-dev eslint-config-prettier eslint-plugin-prettier",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
