--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://rashedraju.github.io/pack-finder",
-  "name": "pack-finder",
+  "homepage": "https://rashedraju.github.io/packmd",
+  "name": "packmd",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -25,7 +25,8 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-syntax-highlighter": "^15.4.3",
-    "remark-gfm": "^1.0.0"
+    "remark-gfm": "^1.0.0",
+    "tsparticles": "^1.37.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -52,6 +53,8 @@
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
     "eslint": "^6.6.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^8.3.0",
@@ -60,6 +63,7 @@
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^1.7.0",
-    "prettier": "^2.3.0"
+    "prettier": "^2.3.0",
+    "react-test-renderer": "^17.0.2"
   }
 }
